Removed sound from tests
Refactored Arena, Menu and ArenaLoader to receive Sound Classes in the constructor (dependency injection).
Now we pass mocks to them while testing them.
Also mocked some classes in a few tests that shouldn't depend on those classes